--- a/code/products/index.html
+++ b/code/products/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nos Produits</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
-        <img src="" alt="">
+        <img class="logo" src="logo.svg" alt="">
         <div class="nav-items">
-        <img src="" alt="">
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
+        <a href="../code/home/index.html">Home</a>
+        <a href="../code/products/index.html">Recettes</a>
+        <a href="../code/contact/index.html">Contact</a>
     </div>
     </nav>
 </body>
