--- a/code/products/index.html
+++ b/code/products/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <img class="logo" src="logo.svg" alt="">
-        <div class="nav-items">
-        <a href="../code/home/index.html">Home</a>
-        <a href="../code/products/index.html">Recettes</a>
-        <a href="../code/contact/index.html">Contact</a>
-    </div>
-    </nav>
+    <header>
+        <nav>
+            <h2>FAST FOOD</h2>
+            <div class="nav-items">
+            <a href="../code/home/index.html" target="_blank">Home</a>
+            <a href="../code/products/index.html">Recettes</a>
+            <a class="contact" href="../code/contact/index.html">Contact</a>
+        </div>
+        </nav>
+    </header>
 </body>
 </html>
