--- a/code/products/index.html
+++ b/code/products/index.html
@@ -18,8 +18,41 @@
         </div>
         </nav>
     </header>
-    <section>
-        
+    <section class="description">
+        <h1></h1>
+        <p></p>
     </section>
+    <section class="products">
+        <img src="" alt="">
+            <caption></caption>
+        </img>
+        <img src="" alt="">
+            <caption></caption>
+        </img>
+        <img src="" alt="">
+            <caption></caption>
+        </img>
+        <img src="" alt="">
+            <caption></caption>
+        </img>
+        <img src="" alt="">
+            <caption></caption>
+        </img>
+        <img src="" alt="">
+            <caption></caption>
+        </img>
+        <img src="" alt="">
+            <caption></caption>
+        </img>
+        <img src="" alt="">
+            <caption></caption>
+        </img>
+        <img src="" alt="">
+            <caption></caption>
+        </img>
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
