--- a/code/products/index.html
+++ b/code/products/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <h2>FAST FOOD</h2>
+            <h2>FOOD MASTERS</h2>
             <div class="nav-items">
             <a href="../code/home/index.html" target="_blank">Home</a>
             <a href="../code/products/index.html">Recettes</a>
@@ -54,7 +54,7 @@
         <img src="" alt="">
             <caption></caption>
         </img>
-        
+
         <img src="" alt="">
             <caption></caption>
         </img>
