--- a/code/products/index.html
+++ b/code/products/index.html
@@ -23,41 +23,26 @@
         <p></p>
     </section>
     <section class="products">
-        <img src="" alt="">
+        <img src="./icons/gallery-img1.jpg" alt="">
             <caption></caption>
         </img>
 
-        <img src="" alt="">
+        <img src="./icons/gallery-img2.jpg" alt="">
             <caption></caption>
         </img>
 
-        <img src="" alt="">
+        <img src="./icons/gallery-img3.jpg" alt="">
             <caption></caption>
         </img>
 
-        <img src="" alt="">
+        <img src="./icons/gallery-img4.jpg" alt="">
             <caption></caption>
         </img>
 
-        <img src="" alt="">
+        <img src="./icons/gallery-img5.jpg" alt="">
             <caption></caption>
         </img>
 
-        <img src="" alt="">
-            <caption></caption>
-        </img>
-
-        <img src="" alt="">
-            <caption></caption>
-        </img>
-
-        <img src="" alt="">
-            <caption></caption>
-        </img>
-
-        <img src="" alt="">
-            <caption></caption>
-        </img>
     </section>
     <footer>
 
