--- a/code/products/index.html
+++ b/code/products/index.html
@@ -23,24 +23,29 @@
         <p></p>
     </section>
     <section class="products">
-        <img src="./icons/gallery-img1.jpg" alt="">
-            <caption></caption>
+        <img  class="" src="./icons/gallery-img1.jpg" alt="">
+            <caption>Lemon-Rosemary Prawn <br>
+                Seafood / Shrimp / Lemon</caption>
         </img>
 
         <img src="./icons/gallery-img2.jpg" alt="">
-            <caption></caption>
+            <caption>Lemon-Rosemary Vegetables <br>
+                Tomato / Rosemary / Lemon</caption>
         </img>
 
         <img src="./icons/gallery-img3.jpg" alt="">
-            <caption></caption>
+            <caption>Lemon-Rosemary Bakery <br>
+                Bread / Rosemary / Orange</caption>
         </img>
 
         <img src="./icons/gallery-img4.jpg" alt="">
-            <caption></caption>
+            <caption>Lemon-Rosemary Salad <br>
+                Chicken / Rosemary / Green</caption>
         </img>
 
         <img src="./icons/gallery-img5.jpg" alt="">
-            <caption></caption>
+            <caption>Lemon-Rosemary Pizza <br>
+                Pasta / Rosemary / Green</caption>
         </img>
 
     </section>
