--- a/code/products/index.html
+++ b/code/products/index.html
@@ -18,35 +18,48 @@
         </div>
         </nav>
     </header>
+
     <section class="description">
         <h1></h1>
         <p></p>
     </section>
+
     <section class="products">
-        <img  class="" src="./icons/gallery-img1.jpg" alt="">
-            <caption>Lemon-Rosemary Prawn <br>
-                Seafood / Shrimp / Lemon</caption>
-        </img>
 
-        <img src="./icons/gallery-img2.jpg" alt="">
-            <caption>Lemon-Rosemary Vegetables <br>
-                Tomato / Rosemary / Lemon</caption>
-        </img>
+        <div class="pic1-cont">
+            <img  class="pic1" src="./icons/gallery-img1.jpg" alt="">
+                <caption>Lemon-Rosemary Prawn <br>
+                    Seafood / Shrimp / Lemon</caption>
+            </img>
+        </div>
 
-        <img src="./icons/gallery-img3.jpg" alt="">
-            <caption>Lemon-Rosemary Bakery <br>
-                Bread / Rosemary / Orange</caption>
-        </img>
+        <div class="pic2-cont">
+            <img class="pic2" src="./icons/gallery-img2.jpg" alt="">
+                <caption>Lemon-Rosemary Vegetables <br>
+                    Tomato / Rosemary / Lemon</caption>
+            </img>
+        </div>
 
-        <img src="./icons/gallery-img4.jpg" alt="">
-            <caption>Lemon-Rosemary Salad <br>
-                Chicken / Rosemary / Green</caption>
-        </img>
+        <div class="pic3-cont">
+            <img class="pic3" src="./icons/gallery-img3.jpg" alt="">
+                <caption>Lemon-Rosemary Bakery <br>
+                    Bread / Rosemary / Orange</caption>
+            </img>
+        </div>
 
-        <img src="./icons/gallery-img5.jpg" alt="">
-            <caption>Lemon-Rosemary Pizza <br>
-                Pasta / Rosemary / Green</caption>
-        </img>
+        <div class="pic4-cont">
+            <img  class="pic4" src="./icons/gallery-img4.jpg" alt="">
+                <caption>Lemon-Rosemary Salad <br>
+                    Chicken / Rosemary / Green</caption>
+            </img>
+        </div>
+
+        <div class="pic5-cont">
+            <img class="pic5" src="./icons/gallery-img5.jpg" alt="">
+                <caption>Lemon-Rosemary Pizza <br>
+                    Pasta / Rosemary / Green</caption>
+            </img>
+        </div>
 
     </section>
     <footer>
