--- a/code/products/index.html
+++ b/code/products/index.html
@@ -18,14 +18,14 @@
         </div>
         </nav>
     </header>
-
+    <hr>
     <section class="description">
         <h1></h1>
         <p></p>
     </section>
 
     <section class="products">
-
+        <h2>Our Products</h2>
         <div class="pic1-cont">
             <img  class="pic1" src="./icons/gallery-img1.jpg" alt="">
                 <caption>Lemon-Rosemary Prawn <br>
