--- a/code/products/index.html
+++ b/code/products/index.html
@@ -20,8 +20,8 @@
     </header>
     <hr>
     <section class="description">
-        <h1></h1>
-        <p></p>
+        <h1>FOOD MASTERS</h1>
+        <p>Not The only But The Best</p>
     </section>
 
     <section class="products">
