--- a/code/products/index.html
+++ b/code/products/index.html
@@ -18,10 +18,9 @@
         </div>
         </nav>
     </header>
-    <hr>
     <section class="description">
-        <h1>FOOD MASTERS</h1>
-        <p>Not The only But The Best</p>
+        <h1 class="title">FOOD MASTERS</h1>
+        <p class="title-des">Not The only But The Best</p>
     </section>
 
     <section class="products">
