--- a/code/products/index.html
+++ b/code/products/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nos Produits</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/">
 </head>
 <body>
     <header>
@@ -18,13 +19,17 @@
         </div>
         </nav>
     </header>
-    <section class="description">
-        <h1 class="title">FOOD MASTERS</h1>
-        <p class="title-des">Not The only But The Best</p>
+    <section class="description ">
+            <div>
+                <h1 class="title">FOOD MASTERS</h1>
+                <p class="title-des">Not The only But The Best</p>
+            </div>
     </section>
 
     <section class="products">
-        <h2>Our Products</h2>
+        <div class="OurProducts">
+            <h2 class="OurProducts-title">Our Products</h2>
+        </div>
         <div class="pic1-cont">
             <img  class="pic1" src="./icons/gallery-img1.jpg" alt="">
                 <caption>Lemon-Rosemary Prawn <br>
