--- a/code/products/index.html
+++ b/code/products/index.html
@@ -20,10 +20,16 @@
         </nav>
     </header>
     <section class="description ">
-            <div>
-                <h1 class="title">FOOD MASTERS</h1>
-                <p class="title-des">Not The only But The Best</p>
+            <div class="des-child">
+                <div>
+                    <h1 class="title">FOOD MASTERS</h1>
+                </div>
+
+                <div class="">
+                    <p class="title-des">Not The only But The Best</p>
+                </div>
             </div>
+
     </section>
 
     <section class="products">
