--- a/code/products/index.html
+++ b/code/products/index.html
@@ -36,19 +36,19 @@
             <h2 class="OurProducts-title">Our Products</h2>
         </div>
 
-        <div class="products-pics row">
+        <div class="products-pics container row ">
             <div class="col-lg-4">
 
                 <div class="pic1-cont ">
-                    <img  class="pic1" src="./icons/gallery-img1.jpg" alt="">
+                    <img  class="pic1" src="./icons/gallery-img1.jpg" alt="Lemon-Rosemary Prawn">
                         <caption>Lemon-Rosemary Prawn <br>
                             Seafood / Shrimp / Lemon</caption>
                     </img>
                 </div>
         
                 <div class="pic2-cont">
-                    <img class="pic2" src="./icons/gallery-img2.jpg" alt="">
-                        <p>Lemon-Rosemary Vegetables <br>
+                    <img class="pic2" src="./icons/gallery-img2.jpg" alt="Lemon-Rosemary Prawn">
+                        <p>Lemon-Rosemary Prawn <br>
                             Tomato / Rosemary / Lemon</p>
                     </img>
                 </div>
@@ -58,8 +58,8 @@
             <div class="col-lg-4">
 
                     <img class="pic3" src="./icons/gallery-img3.jpg" alt="">
-                        <p>Lemon-Rosemary Bakery <br>
-                            Bread / Rosemary / Orange</p>
+                        <caption>Lemon-Rosemary Bakery <br>
+                            Bread / Rosemary / Orange</caption>
                     </img>
 
             </div>
@@ -68,15 +68,15 @@
 
                 <div class="pic4-cont ">
                     <img  class="pic4" src="./icons/gallery-img4.jpg" alt="">
-                        <p>Lemon-Rosemary Salad <br>
-                            Chicken / Rosemary / Green</p>
+                        <caption>Lemon-Rosemary Salad <br>
+                            Chicken / Rosemary / Green</caption>
                     </img>
                 </div>
         
                 <div class="pic5-cont ">
                     <img class="pic5" src="./icons/gallery-img5.jpg" alt="">
-                        <p>Lemon-Rosemary Pizza <br>
-                            Pasta / Rosemary / Green</p>
+                        <caption>Lemon-Rosemary Pizza <br>
+                            Pasta / Rosemary / Green</caption>
                     </img>
                 </div>
 
