--- a/code/products/index.html
+++ b/code/products/index.html
@@ -57,7 +57,7 @@
             
             <div class="col-lg-4">
 
-                    <img class="pic3" src="./icons/gallery-img3.jpg" alt="">
+                    <img class="pic3" src="./icons/gallery-img3.jpg" alt="Lemon-Rosemary Bakery">
                         <caption>Lemon-Rosemary Bakery <br>
                             Bread / Rosemary / Orange</caption>
                     </img>
@@ -67,14 +67,14 @@
             <div class="col-lg-4">
 
                 <div class="pic4-cont ">
-                    <img  class="pic4" src="./icons/gallery-img4.jpg" alt="">
+                    <img  class="pic4" src="./icons/gallery-img4.jpg" alt="Lemon-Rosemary Salad">
                         <caption>Lemon-Rosemary Salad <br>
                             Chicken / Rosemary / Green</caption>
                     </img>
                 </div>
         
                 <div class="pic5-cont ">
-                    <img class="pic5" src="./icons/gallery-img5.jpg" alt="">
+                    <img class="pic5" src="./icons/gallery-img5.jpg" alt="Lemon-Rosemary Pizza">
                         <caption>Lemon-Rosemary Pizza <br>
                             Pasta / Rosemary / Green</caption>
                     </img>
