--- a/code/products/index.html
+++ b/code/products/index.html
@@ -41,8 +41,8 @@
 
                 <div class="pic1-cont ">
                     <img  class="pic1" src="./icons/gallery-img1.jpg" alt="Lemon-Rosemary Prawn">
-                        <caption>Lemon-Rosemary Prawn <br>
-                            Seafood / Shrimp / Lemon</caption>
+                        <p>Lemon-Rosemary Prawn <br>
+                            Seafood / Shrimp / Lemon</p>
                     </img>
                 </div>
         
@@ -58,8 +58,8 @@
             <div class="col-lg-4">
 
                     <img class="pic3" src="./icons/gallery-img3.jpg" alt="Lemon-Rosemary Bakery">
-                        <caption>Lemon-Rosemary Bakery <br>
-                            Bread / Rosemary / Orange</caption>
+                        <p>Lemon-Rosemary Bakery <br>
+                            Bread / Rosemary / Orange</p>
                     </img>
 
             </div>
@@ -68,15 +68,15 @@
 
                 <div class="pic4-cont ">
                     <img  class="pic4" src="./icons/gallery-img4.jpg" alt="Lemon-Rosemary Salad">
-                        <caption>Lemon-Rosemary Salad <br>
-                            Chicken / Rosemary / Green</caption>
+                        <p>Lemon-Rosemary Salad <br>
+                            Chicken / Rosemary / Green</p>
                     </img>
                 </div>
         
                 <div class="pic5-cont ">
                     <img class="pic5" src="./icons/gallery-img5.jpg" alt="Lemon-Rosemary Pizza">
-                        <caption>Lemon-Rosemary Pizza <br>
-                            Pasta / Rosemary / Green</caption>
+                        <p>Lemon-Rosemary Pizza <br>
+                            Pasta / Rosemary / Green</p>
                     </img>
                 </div>
 
