--- a/code/products/index.html
+++ b/code/products/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nos Produits</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./css/grid.css">
+    <link rel="stylesheet" href="../products/css/style.css">
+    <link rel="stylesheet" href="../products/css/grid.css">
 </head>
 <body>
 
@@ -91,7 +91,13 @@
     </main>
 
     <footer>
-        
+        <section class="container">
+            <div class="col-md3">
+                <h2>Contact Info</h2>
+            </div>
+            <div class="col-md3"></div>
+            <div class="col-md3"></div>
+        </section>
     </footer>
 </body>
 </html>
