--- a/code/products/index.html
+++ b/code/products/index.html
@@ -94,8 +94,8 @@
         <section class="container">
             <div class="col-md3">
                 <h3>Contact Info</h3>
-                <h4>Phone</h4>
-                <h4>Our Location</h4>
+                <p>Phone <br> <br> <b>212-62971842</b></p>
+                <p>Our Location <br> <br><b>120 Duis aute irure, California, USA</b></p>
             </div>
             <div class="col-md3"></div>
             <div class="col-md3"></div>
