--- a/code/products/index.html
+++ b/code/products/index.html
@@ -92,13 +92,9 @@
 
     <footer>
         <section class="container">
-            <div class="col-md3">
-                <h3>Contact Info</h3>
-                <p>Phone <br> <br> <b>212-62971842</b></p>
-                <p>Our Location <br> <br><b>120 Duis aute irure, California, USA</b></p>
+            <div class="row">
+                <p>all rights reserved &copy 2021 Food Masters</p>
             </div>
-            <div class="col-md3"></div>
-            <div class="col-md3"></div>
         </section>
     </footer>
 </body>
