--- a/code/home/index.html
+++ b/code/home/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <h2>FAST FOOD</h2>
+            <h2>FOOD MASTERS</h2>
             <div class="nav-items">
             <a href="../code/home/index.html" target="_blank">Home</a>
             <a href="../code/products/index.html">Recettes</a>
@@ -17,5 +17,18 @@
         </div>
         </nav>
     </header>
+
+    <main>
+
+        <section class="description ">
+                    <div class="des-child1">
+                        <h1 class="title">FOOD MASTERS</h1>
+                    </div>
+    
+                    <div class="des-child2">
+                        <p class="title-des">Not The only But The Best</p>
+                    </div>
+    
+        </section>
 </body>
 </html>
