--- a/code/products/index.html
+++ b/code/products/index.html
@@ -92,7 +92,7 @@
 
     <footer>
         <section class="container">
-            <div class="row">
+            <div class="row copyright">
                 <p>all rights reserved &copy 2021 Food Masters</p>
             </div>
         </section>
