--- a/code/home/index.html
+++ b/code/home/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -30,5 +31,13 @@
                     </div>
     
         </section>
+    </main>
+        <footer>
+            <section class="container">
+                <div class="row copyright">
+                    <p>all rights reserved &copy 2021 Food Masters</p>
+                </div>
+            </section>
+        </footer>
 </body>
 </html>
