--- a/code/home/index.html
+++ b/code/home/index.html
@@ -13,7 +13,7 @@
             <h2>FOOD MASTERS</h2>
             <div class="nav-items">
             <a href="../code/home/index.html" target="_blank">Home</a>
-            <a href="../code/products/index.html">Recettes</a>
+            <a href="C:\Users\solicode\OneDrive\Desktop\project\projet5\Projet5-PageVitirine\code\products\index.html" target="_blank">Recettes</a>
             <a class="contact" href="../code/contact/index.html">Contact</a>
         </div>
         </nav>
