--- a/code/home/index.html
+++ b/code/home/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Nos Produits</title>
+    <link rel="stylesheet" href="../products/css/style.css">
+    <link rel="stylesheet" href="../products/css/grid.css">
 </head>
 <body>
+
     <header>
         <nav>
             <h2>FOOD MASTERS</h2>
             <div class="nav-items">
             <a href="../code/home/index.html" target="_blank">Home</a>
-            <a href="C:\Users\solicode\OneDrive\Desktop\project\projet5\Projet5-PageVitirine\code\products\index.html" target="_blank">Recettes</a>
+            <a href="../code/products/index.html">Recettes</a>
             <a class="contact" href="../code/contact/index.html">Contact</a>
         </div>
         </nav>
