--- a/code/contact/index.html
+++ b/code/contact/index.html
@@ -34,6 +34,13 @@
     
         </section>
     </main>
+    <footer>
+        <section class="container">
+            <div class="row copyright">
+                <p>all rights reserved &copy 2021 Food Masters</p>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
 
