--- a/code/contact/index.html
+++ b/code/contact/index.html
@@ -14,10 +14,10 @@
         <nav>
             <h2>FOOD MASTERS</h2>
             <div class="nav-items">
-            <a href="../code/home/index.html" target="_blank">Home</a>
-            <a href="../code/products/index.html">Recettes</a>
-            <a class="contact" href="../code/contact/index.html">Contact</a>
-        </div>
+                <a href="../home/index.html" target="_blank">Home</a>
+                <a href="../products/index.html" target="_blank">Recettes</a>
+                <a class="contact" href="../contact/index.html" target="_blank">Contact</a>
+            </div>
         </nav>
     </header>
 
