--- a/code/products/index.html
+++ b/code/products/index.html
@@ -12,11 +12,11 @@
 
     <header>
         <nav>
-            <h2>FOOD MASTERS</h2>
+            <h2 class="col-xs-3 col-lg-12">FOOD MASTERS</h2>
             <div class="nav-items">
-            <a href="../code/home/index.html" target="_blank">Home</a>
-            <a href="../code/products/index.html">Recettes</a>
-            <a class="contact" href="../code/contact/index.html">Contact</a>
+            <a href="../home/index.html" target="_blank">Home</a>
+            <a href="../products/index.html" target="_blank">Recettes</a>
+            <a class="contact" href="../contact/index.html" target="_blank">Contact</a>
         </div>
         </nav>
     </header>
